feat: favorite respose mapper added