@@ -3,17 +3,17 @@ package dev.jammies.jammies_api_users.playlist;
 import dev.jammies.jammies_api_users.tracks.Track;
 import dev.jammies.jammies_api_users.tracks.TrackRepository;
 import dev.jammies.jammies_api_users.tracks.TrackResponse;
+import dev.jammies.jammies_api_users.tracks.TrackResponseMapper;
 import dev.jammies.jammies_api_users.users.User;
+import dev.jammies.jammies_api_users.utils.CloudinaryService;
+import org.jetbrains.annotations.NotNull;
+import org.springframework.stereotype.Service;
 
 import java.io.IOException;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.UUID;
 import java.util.stream.Collectors;
-
-import dev.jammies.jammies_api_users.utils.CloudinaryService;
-import org.jetbrains.annotations.NotNull;
-import org.springframework.stereotype.Service;
 
 @Service
 public class PlaylistService {
@@ -23,9 +23,9 @@ public class PlaylistService {
     private final TrackRepository trackRepository;
 
     public PlaylistService(
-        PlaylistsRepository playlistsRepository,
-        CloudinaryService cloudinaryService,
-        TrackRepository trackRepository
+            PlaylistsRepository playlistsRepository,
+            CloudinaryService cloudinaryService,
+            TrackRepository trackRepository
     ) {
 
         this.playlistsRepository = playlistsRepository;
@@ -37,26 +37,26 @@ public class PlaylistService {
     public List<PlaylistResponseDto> getAllPlaylists() {
 
         return playlistsRepository
-            .findAll()
-            .stream()
-            .map(this::convertToDto)
-            .collect(Collectors.toList());
+                .findAll()
+                .stream()
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
     }
 
     public List<PlaylistResponseDto> getUserPlaylists(User user) {
         return playlistsRepository
-            .findAllByUser(user)
-            .stream()
-            .map(this::convertToDto)
-            .collect(Collectors.toList());
+                .findAllByUser(user)
+                .stream()
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
     }
 
     public PlaylistResponseDto getPlaylist(UUID playlistId) {
         return playlistsRepository
-            .findById(playlistId)
-            .map(this::convertToDto)
-            .orElseThrow(() -> new NoSuchElementException("Playlist not found")
-            );
+                .findById(playlistId)
+                .map(this::convertToDto)
+                .orElseThrow(() -> new NoSuchElementException("Playlist not found")
+                );
 
     }
 
@@ -69,13 +69,13 @@ public class PlaylistService {
     }
 
     public PlaylistResponseDto updatePlaylist(
-        UUID id,
-        PlaylistRequestDto playlistRequestDto
+            UUID id,
+            PlaylistRequestDto playlistRequestDto
     ) throws IOException {
         Playlist playlist = playlistsRepository
-            .findById(id)
-            .orElseThrow(() -> new NoSuchElementException("Playlist not found")
-            );
+                .findById(id)
+                .orElseThrow(() -> new NoSuchElementException("Playlist not found")
+                );
 
 
         if (playlistRequestDto.getName() != null) {
@@ -89,9 +89,9 @@ public class PlaylistService {
         if (playlistRequestDto.getCover() != null) {
 
             var coverResult = cloudinaryService.upload(
-                playlistRequestDto.getCover(),
-                "jammies_track/playlist/cover",
-                "image"
+                    playlistRequestDto.getCover(),
+                    "jammies_track/playlist/cover",
+                    "image"
             );
 
             if (coverResult == null) {
@@ -104,8 +104,6 @@ public class PlaylistService {
         return convertToDto(playlist);
     }
 
-
-
     public boolean deletePlaylist(UUID id) {
         if (!playlistsRepository.existsById(id)) {
             throw new NoSuchElementException("Playlist not found");
@@ -117,34 +115,33 @@ public class PlaylistService {
     public PlaylistResponseDto convertToDto(@NotNull Playlist playlist) {
 
         return new PlaylistResponseDto(
-            playlist.getId(),
-            playlist.getName(),
-            playlist.getDescription(),
-                 playlist.getUser() != null
-                ? playlist.getUser().getId()
-                : null,
+                playlist.getId(),
+                playlist.getName(),
+                playlist.getDescription(),
+                playlist.getUser() != null
+                        ? playlist.getUser().getId()
+                        : null,
 
-            playlist.getUser() != null
-                ? playlist.getUser().getUsername()
-                : null,
-            playlist.getCover_url()
+                playlist.getUser() != null
+                        ? playlist.getUser().getUsername()
+                        : null,
+                playlist.getCover_url()
         );
     }
-
     // track to playlist
 
     public PlaylistResponseDto AddTrackToPlaylist(
-        UUID playlistId,
-        UUID trackId
+            UUID playlistId,
+            UUID trackId
     ) {
         Playlist playlist = playlistsRepository
-            .findById(playlistId)
-            .orElseThrow(() -> new NoSuchElementException("Playlist not found")
-            );
+                .findById(playlistId)
+                .orElseThrow(() -> new NoSuchElementException("Playlist not found")
+                );
 
         Track track = trackRepository
-            .findById(trackId)
-            .orElseThrow(() -> new NoSuchElementException("Track not found"));
+                .findById(trackId)
+                .orElseThrow(() -> new NoSuchElementException("Track not found"));
 
 
         playlist.getTracks().add(track);
@@ -152,47 +149,31 @@ public class PlaylistService {
         return convertToDto(playlist);
     }
 
-    public List<TrackResponse> getTracksInPlaylist(UUID playlistId) {
+    public List<TrackResponse> getTracksInPlaylist(UUID playlistId, User user) {
 
         Playlist playlist = playlistsRepository
-            .findById(playlistId)
-            .orElseThrow(() -> new NoSuchElementException("Playlist not found")
-            );
-
-        return playlist
-            .getTracks()
-            .stream()
-            .map(this::converTrackToDto)
-            .collect(Collectors.toList());
+                .findById(playlistId)
+                .orElseThrow(() -> new NoSuchElementException("Playlist not found")
+                );
+        return TrackResponseMapper.toResponseList(playlist.getTracks().stream().toList(), user);
     }
 
-    public Boolean removeTrackFromPlaylist(UUID playlistId, UUID trackId) {
+    public void removeTrackFromPlaylist(UUID playlistId, UUID trackId) {
         Playlist playlist = playlistsRepository
-            .findById(playlistId)
-            .orElseThrow(() -> new NoSuchElementException("Playlist not found")
-            );
+                .findById(playlistId)
+                .orElseThrow(() -> new NoSuchElementException("Playlist not found")
+                );
 
         Track Track = trackRepository
-            .findById(trackId)
-            .orElseThrow(() -> new NoSuchElementException("Track not found"));
+                .findById(trackId)
+                .orElseThrow(() -> new NoSuchElementException("Track not found"));
 
 
         playlist.getTracks().remove(Track);
         playlistsRepository.save(playlist);
 
-        return true;
     }
 
-    public TrackResponse converTrackToDto(Track track) {
-        return new TrackResponse(
 
-            track.getId(),
-            track.getTitle(),
-            track.getDuration(),
-            track.getUser().getUsername(),
-            track.getTitle(),
-            track.getCover_image()
-        );
-    }
 }
 
